# NMLT

./: .editorconfig  .gitignore  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  JUDGE_QUICKSTART.md  Makefile  Plan.md  README.md  SECURITY.md  judge-demo.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  research.yml
.github/workflows/: ci.yml
benchmarks/: README.md  manifest.json
benchmarks/agentic/: README.md  evaluation.json  suite.json
benchmarks/grades/: README.md  evidence.json  invalid_uncertainty.nmltg  privacy_budget_violation.nmltg  provider_pipeline.nmltg  unknown_iteration.nmltg
benchmarks/provider-attempt/: V2-CORRECTION.md  provenance.json
comparisons/provider-attempt/: README.md  validation.json
crates/nmlt-agent/: Cargo.toml  README.md
crates/nmlt-agent/src/: artifact.rs  assistant.rs  authority.rs  digest.rs  evaluation.rs  feedback.rs  graph.rs  lib.rs  mutation.rs
crates/nmlt-agent/tests/: authority_controls.rs  benchmark_corpus.rs  held_out_evaluation.rs
crates/nmlt-certificate/: Cargo.toml  README.md
crates/nmlt-certificate-tools/: Cargo.toml  README.md
crates/nmlt-certificate-tools/src/: lib.rs
crates/nmlt-certificate-tools/tests/: simplify.rs
crates/nmlt-certificate/src/: identity.rs  lib.rs  model.rs
crates/nmlt-cli/: Cargo.toml
crates/nmlt-cli/src/: main.rs
crates/nmlt-cli/tests/: cli.rs
crates/nmlt-compile/: Cargo.toml  README.md
crates/nmlt-compile/src/: lib.rs
crates/nmlt-compile/tests/: pipeline.rs
crates/nmlt-core/: Cargo.toml
crates/nmlt-elaborate/: Cargo.toml  README.md
crates/nmlt-elaborate/src/: elaborate.rs  identity.rs  lib.rs  model.rs
crates/nmlt-elaborate/tests/: elaboration.rs
crates/nmlt-engine/: Cargo.toml
crates/nmlt-engine/src/: ast.rs  checked.rs  lib.rs  model.rs  parser.rs  types.rs
crates/nmlt-engine/tests/: provider_benchmark.rs
crates/nmlt-engine/tests/fixtures/type-errors/: cross-system-property.nmlt  duplicated-capability.nmlt  invalid-initializer.nmlt  invalid-update-target.nmlt
crates/nmlt-grades/: Cargo.toml
crates/nmlt-grades/examples/: graded_evidence.rs
crates/nmlt-grades/src/: algebra.rs  checker.rs  lib.rs  parser.rs
crates/nmlt-hir/: Cargo.toml  README.md
crates/nmlt-hir/src/: hir.rs  identity.rs  lib.rs  model.rs  resolution_tests.rs  resolve_terms.rs  resolver.rs  surface.rs  term.rs
crates/nmlt-hir/tests/: source_integration.rs
crates/nmlt-ir/: Cargo.toml  README.md
crates/nmlt-kernel/: Cargo.toml  README.md
crates/nmlt-kernel/src/: check.rs  identity.rs  input.rs  lib.rs  wire.rs
crates/nmlt-kernel/tests/: kernel.rs
crates/nmlt-open-kernel/: Cargo.toml
crates/nmlt-temporal/: Cargo.toml
crates/nmlt-temporal/examples/: phase4_evidence.rs
crates/nmlt-temporal/src/: certificate.rs  graph.rs  lib.rs  observation.rs  open.rs  open_congruence.rs  open_contract.rs  open_encoding.rs  open_refinement.rs  open_resources.rs  refinement.rs  runtime.rs  temporal.rs
crates/nmlt-verify/: Cargo.toml
crates/nmlt-verify/examples/: provider_two_engine.rs
crates/nmlt-verify/src/: certificate.rs  evidence.rs  identity.rs  inductive.rs  ir.rs  lib.rs  proof.rs  reachability.rs  smt.rs  test_hook.rs
crates/nmlt-verify/tests/: phase5.rs
demos/judge/: README.md  judge_demo.py
docs/: README.md  agentic-workflow.md  architecture.md  artifact-identity.md  build-week-public-release-handoff-2026-07-20.md  build-week-video-script.md  competitor-matrix.md  core-calculus.md  design-principles.md  devpost_judge_instructions.md  devpost_submission_text.md  evidence-model.md  glossary.md  graded-resource-extension.md  language-sketch.md  m9-completion-audit-2026-07-19.md  manifesto.md  multiple-engines.md  openai-build-week.md  phase-0-closeout.md  reboot-handoff-2026-07-19.md  reboot-handoff-2026-07-20.md  reproduction-2026-07-18.md  research-method.md  roadmap.md  semantics-correspondence.md  source-corpus.md  temporal-refinement.md  test-report-m11-001b-2026-07-19.md  test-report-m11-001c-core-2026-07-19.md  threat-model.md  typed-executable-core.md  untyped-core-desugaring.md
docs/decisions/: 0001-rust-workspace.md  0002-lossless-syntax.md  0003-project-identity.md  README.md
examples/: CANONICAL.md  README.md  canonical-v1.json
rfcs/: 0000-template.md  0001-behavior-types.md  0002-evidence-manifests.md  0003-lexical-grammar.md  0004-artifact-identity.md  0005-state-and-action-typing.md  0006-explicit-affine-capabilities.md  0007-observation-and-stuttering.md  0008-mechanization-and-compositional-refinement.md  0009-temporal-refinement-runtime.md  0010-multiple-verification-engines.md  0011-authority-bounded-agentic-repair.md  0012-graded-resource-modalities.md  0013-source-to-typed-core.md  README.md
schemas/: agentic-artifact-graph-v1.schema.json  agentic-evaluation-v1.schema.json  agentic-task-suite-v1.schema.json  benchmark-intent-capsule-v1.schema.json  benchmark-manifest.schema.json  benchmark-property-v1.schema.json  benchmark-provenance-v1.schema.json  benchmark-result-v1.schema.json  benchmark-suite-v1.schema.json  benchmark-suite-v2.schema.json  evidence-manifest.schema.json  expected-counterexample-v1.schema.json  graded-evidence-v1.schema.json  model-check-report.schema.json  multi-engine-evidence-v1.schema.json  open-composition-evidence-v1.schema.json  open-congruence-evidence-v1.schema.json  open-refinement-evidence-v1.schema.json  phase6-evidence-graph-v1.schema.json  temporal-evidence-v1.schema.json
security/: trusted-components.toml
tests/: README.md
tools/: canonical_examples.py  check_evidence.py  check_graded_evidence.py  check_m11_congruence_correspondence.py  check_m9_correspondence.py  check_m9_vertical_slice.py  check_metatheory.sh  check_model_reports.py  check_multi_engine_evidence.py  check_nanoda.sh  check_open_composition_evidence.py  check_open_congruence_evidence.py  check_open_refinement_evidence.py  check_phase6_evidence.py  check_temporal_evidence.py  package_judge_release.sh  validate_benchmark_integrity.py  validate_comparisons.sh
(+138 files in other folders)
