[workspace]
members = [
    "crates/nmlt-core",
    "crates/nmlt-engine",
    "crates/nmlt-temporal",
    "crates/nmlt-verify",
    "crates/nmlt-grades",
    "crates/nmlt-agent",
    "crates/nmlt-cli",
]
exclude = ["mechanization/lean/_nanoda_lib"]
default-members = ["crates/nmlt-cli"]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "warn"
unimplemented = "warn"
