[workspace]
members = [
    "crates/nmlt-core",
    "crates/nmlt-hir",
    "crates/nmlt-ir",
    "crates/nmlt-certificate",
    "crates/nmlt-elaborate",
    "crates/nmlt-kernel",
    "crates/nmlt-engine",
    "crates/nmlt-temporal",
    "crates/nmlt-verify",
    "crates/nmlt-grades",
    "crates/nmlt-agent",
    "crates/nmlt-cli",
]
default-members = ["crates/nmlt-cli"]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "warn"
unimplemented = "warn"
