[package]
name = "nmlt-certificate"
description = "Neutral elaboration-certificate syntax and producer identity encoding for NMLT"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
nmlt-hir = { path = "../nmlt-hir" }
nmlt-ir = { path = "../nmlt-ir" }

[lints]
workspace = true
