[package]
name = "nmlt-cli"
description = "Command-line frontend for NMLT"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "nmlt"
path = "src/main.rs"

[dependencies]
nmlt-compile = { path = "../nmlt-compile" }
nmlt-core = { path = "../nmlt-core" }
nmlt-engine = { path = "../nmlt-engine" }
nmlt-kernel = { path = "../nmlt-kernel" }

[lints]
workspace = true
