[package]
name = "nmlt-elaborate"
description = "Bidirectional HIR-to-typed-core elaboration and certificates for NMLT"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
nmlt-hir = { path = "../nmlt-hir" }
nmlt-ir = { path = "../nmlt-ir" }

[lints]
workspace = true
