[package]
name = "nmlt-engine"
description = "Typed behavioral core and deterministic verification engine for NMLT"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
nmlt-core = { path = "../nmlt-core" }
nmlt-hir = { path = "../nmlt-hir" }
nmlt-ir = { path = "../nmlt-ir" }
nmlt-kernel = { path = "../nmlt-kernel" }

[dev-dependencies]
nmlt-compile = { path = "../nmlt-compile" }

[lints]
workspace = true
