[package]
name = "nmlt-hir"
description = "Deterministic module and name resolution boundary for NMLT"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
nmlt-core = { path = "../nmlt-core" }

[lints]
workspace = true
