[package]
name = "nmlt-kernel"
description = "Independent elaboration-certificate checker and CheckedProgram authority for NMLT"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
nmlt-certificate = { path = "../nmlt-certificate" }
nmlt-hir = { path = "../nmlt-hir" }
nmlt-ir = { path = "../nmlt-ir" }

[dev-dependencies]
nmlt-elaborate = { path = "../nmlt-elaborate" }

[lints]
workspace = true
